# nautilus-open-terminal

./: Makefile  README.md  nautilus-open-terminal-0.18-shell-invocation.patch  nautilus-open-terminal-0.19-restoreicon.patch  nautilus-open-terminal.spec  nautilus-open-terminal_msgmerged_for_ja.po.diff
src/: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.in  nautilus-open-terminal.schemas.in
src/po/: LINGUAS  ar.po  as.po  be.po  be@latin.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  mr.po  my.po  nb.po  ne.po  (+23 more)
src/src/: Makefile.am  Makefile.in  eel-gnome-extensions.c  nautilus-open-terminal.c  open-terminal.c
